--- a/ProjetEvent/View Controllers/Menu/ProfileTableViewCell.xib
+++ b/ProjetEvent/View Controllers/Menu/ProfileTableViewCell.xib
@@ -12,49 +12,77 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="175" id="KGk-i7-Jjw" customClass="ProfileTableViewCell" customModule="ProjetEvent" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="175"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="265" id="KGk-i7-Jjw" customClass="ProfileTableViewCell" customModule="ProjetEvent" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="265"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="174.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="264.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="KIu-fz-YZR">
-                        <rect key="frame" x="0.0" y="0.0" width="113" height="95"/>
+                        <rect key="frame" x="0.0" y="0.0" width="95" height="95"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="95" id="aOx-oN-FYV"/>
-                            <constraint firstAttribute="width" constant="113" id="hUs-SW-Lp5"/>
+                            <constraint firstAttribute="width" constant="95" id="hUs-SW-Lp5"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q9U-4V-xAK">
-                        <rect key="frame" x="139" y="11" width="42" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iaV-5u-dJg">
+                        <rect key="frame" x="16" y="110" width="42" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DSx-go-TUO">
-                        <rect key="frame" x="139" y="47" width="42" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kuF-Vg-93I">
+                        <rect key="frame" x="16" y="146" width="42" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5AA-Ta-hSk">
+                        <rect key="frame" x="16" y="182" width="42" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LSM-lt-UFx">
+                        <rect key="frame" x="16" y="218" width="42" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XNq-J1-tEs">
+                        <rect key="frame" x="105.5" y="32" width="110" height="30"/>
+                        <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="15"/>
+                        <state key="normal" title="Edit my profile">
+                            <color key="titleColor" red="1" green="0.02654661375" blue="0.029965965939999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        </state>
+                    </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="DSx-go-TUO" firstAttribute="top" secondItem="Q9U-4V-xAK" secondAttribute="bottom" constant="15" id="68b-H6-MIe"/>
-                    <constraint firstItem="Q9U-4V-xAK" firstAttribute="leading" secondItem="KIu-fz-YZR" secondAttribute="trailing" constant="26" id="JGn-Mm-YZg"/>
+                    <constraint firstItem="XNq-J1-tEs" firstAttribute="centerY" secondItem="KIu-fz-YZR" secondAttribute="centerY" id="0aT-ft-57t"/>
+                    <constraint firstItem="kuF-Vg-93I" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="5HC-Cn-zUI"/>
+                    <constraint firstItem="iaV-5u-dJg" firstAttribute="top" secondItem="KIu-fz-YZR" secondAttribute="bottom" constant="15" id="Qou-UI-7uN"/>
+                    <constraint firstItem="5AA-Ta-hSk" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="VOl-Gk-biu"/>
+                    <constraint firstItem="5AA-Ta-hSk" firstAttribute="top" secondItem="kuF-Vg-93I" secondAttribute="bottom" constant="15" id="WEj-Nf-ZcR"/>
+                    <constraint firstItem="kuF-Vg-93I" firstAttribute="top" secondItem="iaV-5u-dJg" secondAttribute="bottom" constant="15" id="Wbg-4m-V89"/>
+                    <constraint firstItem="XNq-J1-tEs" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="eQP-BT-7is"/>
+                    <constraint firstItem="iaV-5u-dJg" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="ekJ-b4-YyM"/>
+                    <constraint firstItem="LSM-lt-UFx" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="g2J-fN-gFa"/>
+                    <constraint firstItem="LSM-lt-UFx" firstAttribute="top" secondItem="5AA-Ta-hSk" secondAttribute="bottom" constant="15" id="hsp-SL-tND"/>
                     <constraint firstItem="KIu-fz-YZR" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="srF-GJ-Fl7"/>
-                    <constraint firstItem="DSx-go-TUO" firstAttribute="leading" secondItem="KIu-fz-YZR" secondAttribute="trailing" constant="26" id="tDn-Y5-Ugj"/>
-                    <constraint firstItem="Q9U-4V-xAK" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="11" id="tnT-se-Jz2"/>
                     <constraint firstItem="KIu-fz-YZR" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="zNL-Zu-WHP"/>
+                    <constraint firstAttribute="bottom" secondItem="LSM-lt-UFx" secondAttribute="bottom" constant="25.5" id="zaa-Sg-8pT"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="lblLastName" destination="DSx-go-TUO" id="XKj-mA-Rqx"/>
-                <outlet property="lblName" destination="Q9U-4V-xAK" id="kfd-Yy-EHm"/>
+                <outlet property="lblLastName" destination="kuF-Vg-93I" id="VDz-8F-29K"/>
+                <outlet property="lblMail" destination="5AA-Ta-hSk" id="I9g-Q1-g1x"/>
+                <outlet property="lblName" destination="iaV-5u-dJg" id="uAF-AQ-V0G"/>
+                <outlet property="lblTel" destination="LSM-lt-UFx" id="UsX-Ft-syG"/>
                 <outlet property="profileImageView" destination="KIu-fz-YZR" id="7S0-wX-0RA"/>
             </connections>
-            <point key="canvasLocation" x="34" y="119.5"/>
+            <point key="canvasLocation" x="34" y="164.5"/>
         </tableViewCell>
     </objects>
 </document>
