--- a/ProjetEvent/profile/ProfileViewController.xib
+++ b/ProjetEvent/profile/ProfileViewController.xib
@@ -39,7 +39,7 @@
                             <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <textInputTraits key="textInputTraits"/>
+                            <textInputTraits key="textInputTraits" autocapitalizationType="words"/>
                             <connections>
                                 <action selector="txtEditingChange:" destination="-1" eventType="editingDidEnd" id="YY3-hI-tGe"/>
                                 <outlet property="delegate" destination="-1" id="LXk-4a-Smc"/>
@@ -51,7 +51,7 @@
                             <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <textInputTraits key="textInputTraits"/>
+                            <textInputTraits key="textInputTraits" autocapitalizationType="words" textContentType="nickname"/>
                             <connections>
                                 <action selector="txtEditingChange:" destination="-1" eventType="editingDidEnd" id="Xiw-jX-hsZ"/>
                                 <outlet property="delegate" destination="-1" id="1um-yv-Eww"/>
