--- a/ProjetEvent/View Controllers/Menu/CreditCard/AddCreditCardViewController.xib
+++ b/ProjetEvent/View Controllers/Menu/CreditCard/AddCreditCardViewController.xib
@@ -43,63 +43,67 @@
                         </navigationItem>
                     </items>
                 </navigationBar>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="sVc-rt-EaU">
-                    <rect key="frame" x="16" y="69" width="339" height="60"/>
-                    <subviews>
-                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Card owner name..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xlq-X6-ZEW">
-                            <rect key="frame" x="0.0" y="0.0" width="339" height="30"/>
-                            <nil key="textColor"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits"/>
-                            <connections>
-                                <action selector="textEditingChanged:" destination="-1" eventType="editingDidEnd" id="FKa-lM-pgI"/>
-                            </connections>
-                        </textField>
-                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Card number..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bYJ-Ui-VIo">
-                            <rect key="frame" x="0.0" y="30" width="339" height="30"/>
-                            <nil key="textColor"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits"/>
-                            <connections>
-                                <action selector="textEditingChanged:" destination="-1" eventType="editingDidEnd" id="QqE-Nk-H4W"/>
-                            </connections>
-                        </textField>
-                    </subviews>
-                </stackView>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Expiry date..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zdV-tx-FYN">
-                    <rect key="frame" x="16" y="144" width="339" height="30"/>
+                    <rect key="frame" x="16" y="173" width="343" height="30"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits"/>
+                    <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                     <connections>
                         <action selector="textEditingChanged:" destination="-1" eventType="editingDidEnd" id="jMY-wN-5DB"/>
+                        <outlet property="delegate" destination="-1" id="I8w-nn-K0C"/>
                     </connections>
                 </textField>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="CVV" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TBW-9o-aCG">
-                    <rect key="frame" x="16" y="189" width="339" height="30"/>
+                    <rect key="frame" x="16" y="226" width="343" height="30"/>
+                    <nil key="textColor"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                    <connections>
+                        <action selector="textEditingChanged:" destination="-1" eventType="editingDidEnd" id="zuP-wI-h0b"/>
+                        <outlet property="delegate" destination="-1" id="QVE-Ww-tEX"/>
+                    </connections>
+                </textField>
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Card owner name..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xlq-X6-ZEW">
+                    <rect key="frame" x="16" y="67" width="343" height="30"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                     <connections>
-                        <action selector="textEditingChanged:" destination="-1" eventType="editingDidEnd" id="zuP-wI-h0b"/>
+                        <action selector="textEditingChanged:" destination="-1" eventType="editingDidEnd" id="FKa-lM-pgI"/>
+                        <outlet property="delegate" destination="-1" id="jKr-FZ-bEr"/>
+                    </connections>
+                </textField>
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Card number..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bYJ-Ui-VIo">
+                    <rect key="frame" x="16" y="120" width="343" height="30"/>
+                    <nil key="textColor"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                    <connections>
+                        <action selector="textEditingChanged:" destination="-1" eventType="editingDidEnd" id="QqE-Nk-H4W"/>
+                        <outlet property="delegate" destination="-1" id="Xpi-VA-BoI"/>
                     </connections>
                 </textField>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="TBW-9o-aCG" secondAttribute="bottom" constant="448" id="1bS-HE-fSt"/>
-                <constraint firstItem="E81-uf-rRd" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="B47-kt-Gak"/>
-                <constraint firstItem="sVc-rt-EaU" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="E4m-IU-CIY"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="TBW-9o-aCG" secondAttribute="trailing" constant="20" id="Eqi-HR-7nG"/>
-                <constraint firstItem="TBW-9o-aCG" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="ExG-dW-NH0"/>
-                <constraint firstItem="E81-uf-rRd" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="OZi-zV-vKU"/>
-                <constraint firstItem="sVc-rt-EaU" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="49" id="PAa-nw-6Bh"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="zdV-tx-FYN" secondAttribute="trailing" constant="20" id="aWY-wb-YwC"/>
-                <constraint firstItem="zdV-tx-FYN" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="ak6-k0-ONQ"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="sVc-rt-EaU" secondAttribute="trailing" constant="20" id="biF-RT-yep"/>
-                <constraint firstItem="TBW-9o-aCG" firstAttribute="top" secondItem="zdV-tx-FYN" secondAttribute="bottom" constant="15" id="eRX-Vo-BJB"/>
-                <constraint firstAttribute="trailing" secondItem="E81-uf-rRd" secondAttribute="trailing" id="y2n-VA-Q4K"/>
-                <constraint firstItem="zdV-tx-FYN" firstAttribute="top" secondItem="bYJ-Ui-VIo" secondAttribute="bottom" constant="15" id="ysv-uC-dfW"/>
+                <constraint firstItem="bYJ-Ui-VIo" firstAttribute="height" secondItem="xlq-X6-ZEW" secondAttribute="height" id="92K-8y-aYn"/>
+                <constraint firstItem="TBW-9o-aCG" firstAttribute="top" secondItem="zdV-tx-FYN" secondAttribute="bottom" constant="23" id="AQ0-tb-UzW"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="top" secondItem="E81-uf-rRd" secondAttribute="top" constant="20" id="Co6-6L-G5V"/>
+                <constraint firstItem="TBW-9o-aCG" firstAttribute="height" secondItem="xlq-X6-ZEW" secondAttribute="height" id="Fv6-4h-34Q"/>
+                <constraint firstItem="TBW-9o-aCG" firstAttribute="trailing" secondItem="xlq-X6-ZEW" secondAttribute="trailing" id="G03-rI-fOx"/>
+                <constraint firstItem="zdV-tx-FYN" firstAttribute="height" secondItem="xlq-X6-ZEW" secondAttribute="height" id="GGr-dl-cQs"/>
+                <constraint firstItem="xlq-X6-ZEW" firstAttribute="top" secondItem="E81-uf-rRd" secondAttribute="bottom" constant="23" id="IIN-kp-w35"/>
+                <constraint firstItem="bYJ-Ui-VIo" firstAttribute="top" secondItem="xlq-X6-ZEW" secondAttribute="bottom" constant="23" id="Nrk-L0-2Lp"/>
+                <constraint firstItem="zdV-tx-FYN" firstAttribute="leading" secondItem="xlq-X6-ZEW" secondAttribute="leading" id="Ogd-dt-hm8"/>
+                <constraint firstItem="bYJ-Ui-VIo" firstAttribute="trailing" secondItem="xlq-X6-ZEW" secondAttribute="trailing" id="RZC-Ld-kyR"/>
+                <constraint firstItem="bYJ-Ui-VIo" firstAttribute="leading" secondItem="xlq-X6-ZEW" secondAttribute="leading" id="VzC-fX-Zh1"/>
+                <constraint firstItem="xlq-X6-ZEW" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="XhY-qL-D3U"/>
+                <constraint firstItem="zdV-tx-FYN" firstAttribute="trailing" secondItem="xlq-X6-ZEW" secondAttribute="trailing" id="amg-mY-uWf"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="E81-uf-rRd" secondAttribute="trailing" id="d0X-2h-pSc"/>
+                <constraint firstItem="zdV-tx-FYN" firstAttribute="top" secondItem="bYJ-Ui-VIo" secondAttribute="bottom" constant="23" id="dGx-is-oSB"/>
+                <constraint firstItem="E81-uf-rRd" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="jlW-V1-595"/>
+                <constraint firstItem="TBW-9o-aCG" firstAttribute="leading" secondItem="xlq-X6-ZEW" secondAttribute="leading" id="sLv-Ga-EjH"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="xlq-X6-ZEW" secondAttribute="trailing" constant="16" id="uRa-pS-8K0"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="34.5" y="69.5"/>
