--- a/ProjetEvent/EventViewController.xib
+++ b/ProjetEvent/EventViewController.xib
@@ -23,7 +23,7 @@
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="130" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Hmz-CY-zL0">
                     <rect key="frame" x="0.0" y="61" width="375" height="606"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" red="0.83314203740000004" green="0.82911719669999995" blue="0.83716687820000002" alpha="0.29973779969999997" colorSpace="custom" customColorSpace="displayP3"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="MPc-B9-SJU"/>
                         <outlet property="delegate" destination="-1" id="bbY-mr-Vfv"/>
