--- a/ProjetEvent/View Controllers/Events/Form Event/AddEvent/AddEventViewController.xib
+++ b/ProjetEvent/View Controllers/Events/Form Event/AddEvent/AddEventViewController.xib
@@ -4,6 +4,7 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -87,7 +88,7 @@
                     </items>
                 </navigationBar>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.83314203740000004" green="0.82911719669999995" blue="0.83716687820000002" alpha="0.29973779969999997" colorSpace="custom" customColorSpace="displayP3"/>
             <constraints>
                 <constraint firstItem="w8F-Xl-1Zf" firstAttribute="top" secondItem="Lgs-V4-aUz" secondAttribute="bottom" constant="32" id="AJV-5r-vmb"/>
                 <constraint firstItem="3xV-5f-NEX" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="55" id="AQ3-ms-wUS"/>
