--- a/ProjetEvent/View Controllers/Menu/CreditCard/CreditCardViewController.xib
+++ b/ProjetEvent/View Controllers/Menu/CreditCard/CreditCardViewController.xib
@@ -40,7 +40,7 @@
                 </navigationBar>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="dSt-BM-8pv">
                     <rect key="frame" x="0.0" y="64" width="375" height="603"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" red="0.83314203740000004" green="0.82911719669999995" blue="0.83716687820000002" alpha="0.29973779969999997" colorSpace="custom" customColorSpace="displayP3"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="Zfo-C1-g3q"/>
                         <outlet property="delegate" destination="-1" id="xMl-hI-py5"/>
